<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/record_name"
        android:ems="10"
        android:id="@+id/name" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/record_neck"
        android:id="@+id/neck" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/record_bust"
        android:id="@+id/bust" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="Chest"
        android:id="@+id/chest" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/record_waist"
        android:id="@+id/waist" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/record_hip"
        android:id="@+id/hip" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="@string/record_inseam"
        android:id="@+id/inseam"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/record_comment"
        android:id="@+id/record_comment" />

    <Button
        android:text="@string/record_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_add_button" />

    <Button
        android:text="Delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/record_delete_button" />
</LinearLayout>